load("@io_bazel_rules_go//go:def.bzl", "gazelle", "go_binary", "go_library")

gazelle(
    name = "gazelle",
    external = "vendored",
    prefix = "github.com/nshttpd/fn-tenor",
)

go_library(
    name = "go_default_library",
    srcs = ["func.go"],
    importpath = "github.com/nshttpd/fn-tenor",
    visibility = ["//visibility:private"],
    deps = [
        "//tenor:go_default_library",
        "//vendor/github.com/fnproject/fdk-go:go_default_library",
    ],
)

go_binary(
    name = "tenor-root",
    embed = [":go_default_library"],
    importpath = "github.com/nshttpd/fn-tenor",
    visibility = ["//visibility:public"],
)
