load("@io_bazel_rules_go//go:def.bzl", "gazelle", "go_binary", "go_library")

gazelle(
    name = "gazelle",
    external = "vendored",
    prefix = "github.com/nshttpd/fn-tenor",
)

go_library(
    name = "go_default_library",
    srcs = ["func.go"],
    importpath = "github.com/nshttpd/fn-tenor",
    visibility = ["//visibility:private"],
    deps = [
        "//tenor:go_default_library",
        "//vendor/github.com/fnproject/fdk-go:go_default_library",
    ],
)

go_binary(
    name = "tenor-root",
    embed = [":go_default_library"],
    importpath = "github.com/nshttpd/fn-tenor",
    visibility = ["//visibility:public"],
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image", "container_push",
)

container_image(
    name = "fn-tenor-root",
    base = "@fn_go//image",
    files = [":tenor-root"],
    entrypoint = ["/tenor-root"],
)

container_push(
   name = "push_fn-tenor-root",
   image = ":fn-tenor-root",
   format = "Docker",
   registry = "index.docker.io",
   repository = "nshttpd/fn-tenor-root",
   tag = "test",
)